--- a/Index.html
+++ b/Index.html
@@ -1,75 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
-    <link
-      rel="stylesheet"
-      as="style"
-      onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Public+Sans%3Awght%40400%3B500%3B700%3B900"
-    />
-    <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ELWP Volunteer</title>
+
+    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700;900&family=Public+Sans:wght@400;500;700;900&display=swap" rel="stylesheet" />
+
+    <style>
+      body {
+        font-family: 'Public Sans', 'Noto Sans', sans-serif;
+      }
+    </style>
   </head>
-  <body>
-    <div class="relative flex size-full min-h-screen flex-col bg-[#f8fafb] group/design-root overflow-x-hidden" style='font-family: "Public Sans", "Noto Sans", sans-serif;'>
-      <div class="layout-container flex h-full grow flex-col">
-        <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#e8eef3] px-10 py-3">
-          <!-- Left side: Logo and "ELWP Volunteer" -->
-          <div class="flex items-center gap-6 text-[#0e161b]">
-            <div class="w-12 h-12">
-              <img src="logoelwp.jpeg" alt="ELWP Logo" class="w-full h-full object-contain">
-            </div>
-            <h2 class="text-[#0e161b] text-lg font-bold leading-tight tracking-[-0.015em]">
-              ELWP Volunteer
-            </h2>
-          </div>
 
-          <!-- Right side: Navigation Links -->
-          <div class="flex flex-1 justify-end gap-8">
-            <nav class="flex items-center gap-9">
-              <a class="text-[#0e161b] text-sm font-medium leading-normal" href="#">About</a>
-              <a class="text-[#0e161b] text-sm font-medium leading-normal" href="#">Volunteer</a>
-              <a class="text-[#0e161b] text-sm font-medium leading-normal" href="#">Events</a>
-            </nav>
-
-            <!-- Login Button -->
-            <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#1d8cd7] text-[#f8fafb] text-sm font-bold leading-normal tracking-[0.015em]">
-              <a href="portal.html">Log in</a>
-            </button>
-          </div>
-        </header>
-        <div class="px-40 flex flex-1 justify-center py-5">
-          <div class="layout-content-container flex flex-col w-[512px] max-w-[512px] py-5 max-w-[960px] flex-1">
-            <div class="@container">
-              <div class="@[480px]:p-4">
-                <div class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-4"
-                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("front.png");'>
-                  <div class="flex flex-col gap-2 text-center">
-                    <h1 class="text-white text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]">
-                      Volunteer at ELWP
-                    </h1>
-                    <h2 class="text-white text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
-                      Help us create a more sustainable planet by volunteering. All skill levels and ages are welcome.
-                    </h2>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <p class="text-[#507a95] text-sm font-normal leading-normal pb-3 pt-1 px-4 text-center">Already a volunteer? Log in here</p>
-            <div class="flex px-4 py-3 justify-center">
-              <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#e8eef3] text-[#0e161b] text-sm font-bold leading-normal tracking-[0.015em]">                 <a href="portal.html">Log in</a>
-              </button>
-            </div>
-            <p class="text-[#507a95] text-sm font-normal leading-normal pb-3 pt-1 px-4 text-center">Not a volunteer yet? Take our survey to get started</p>
-            <div class="flex px-4 py-3 justify-center">
-              <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#e8eef3] text-[#0e161b] text-sm font-bold leading-normal tracking-[0.015em]">
-                <a href="survey.html">Take the survey</a>
-              </button>
-            </div>
-          </div>
+  <body class="bg-[#f8fafb] min-h-screen flex flex-col overflow-x-hidden">
+    <!-- Header -->
+    <header class="flex items-center justify-between border-b border-[#e8eef3] px-10 py-4 bg-white">
+      <div class="flex items-center gap-4 text-[#0e161b]">
+        <div class="w-12 h-12">
+          <img src="logoelwp.jpeg" alt="ELWP Logo" class="w-full h-full object-contain" />
         </div>
+        <h2 class="text-lg font-bold">ELWP Volunteer</h2>
       </div>
-    </div>
+      <nav class="flex items-center gap-6">
+        <a href="#" class="text-sm font-medium text-[#0e161b]">About</a>
+        <a href="#" class="text-sm font-medium text-[#0e161b]">Volunteer</a>
+        <a href="#" class="text-sm font-medium text-[#0e161b]">Events</a>
+      </nav>
+      <a href="portal.html" class="ml-6">
+        <button class="bg-[#1d8cd7] text-white font-bold text-sm px-4 py-2 rounded-xl">
+          Log in
+        </button>
+      </a>
+    </header>
+
+    <!-- Main Content -->
+    <main class="flex flex-col items-center justify-center px-4 py-10">
+      <section class="w-full max-w-3xl text-center rounded-xl overflow-hidden bg-cover bg-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('front.png');">
+        <div class="p-10 text-white">
+          <h1 class="text-4xl font-black mb-2">Volunteer at ELWP</h1>
+          <p class="text-base font-light">
+            Help us create a more sustainable planet by volunteering. All skill levels and ages are welcome.
+          </p>
+        </div>
+      </section>
+
+      <!-- Login CTA -->
+      <p class="text-[#507a95] text-sm mt-6">Already a volunteer? Log in here</p>
+      <a href="portal.html" class="w-full max-w-xs mt-2">
+        <button class="w-full bg-[#e8eef3] text-[#0e161b] font-bold py-2 rounded-xl">
+          Log in
+        </button>
+      </a>
+
+      <!-- Survey CTA -->
+      <p class="text-[#507a95] text-sm mt-6">Not a volunteer yet? Take our survey to get started</p>
+      <a href="survey.html" class="w-full max-w-xs mt-2">
+        <button class="w-full bg-[#e8eef3] text-[#0e161b] font-bold py-2 rounded-xl">
+          Take the survey
+        </button>
+      </a>
+    </main>
   </body>
 </html>
