--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
 
     <!-- Main Content -->
     <main class="flex flex-col items-center justify-center px-4 py-10">
-      <section class="w-full max-w-3xl text-center rounded-xl overflow-hidden bg-cover bg-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('front.png');">
-        <div class="p-10 text-white">
-          <h1 class="text-4xl font-black mb-2">Volunteer at ELWP</h1>
-          <p class="text-base font-light">
+      <!-- Hero Section with Bigger Background -->
+      <section class="w-full max-w-6xl text-center rounded-xl overflow-hidden bg-cover bg-center h-[400px] md:h-[500px] mb-10" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('front.png');">
+        <div class="h-full w-full flex flex-col justify-center items-center text-white px-6">
+          <h1 class="text-4xl md:text-5xl font-black mb-2">Volunteer at ELWP</h1>
+          <p class="text-base md:text-lg font-light max-w-2xl">
             Help us create a more sustainable planet by volunteering. All skill levels and ages are welcome.
           </p>
         </div>
       </section>
 
       <!-- Login CTA -->
-      <p class="text-[#507a95] text-sm mt-6">Already a volunteer? Log in here</p>
+      <p class="text-[#507a95] text-sm mt-2">Already a volunteer? Log in here</p>
       <a href="portal.html" class="w-full max-w-xs mt-2">
         <button class="w-full bg-[#e8eef3] text-[#0e161b] font-bold py-2 rounded-xl">
           Log in
