--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Main Content -->
     <main class="flex flex-col items-center justify-center px-4 py-10">
       <!-- Hero Section with Bigger Background -->
-      <section class="w-full max-w-6xl text-center rounded-xl overflow-hidden bg-cover bg-center h-[400px] md:h-[500px] mb-10" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('front.png');">
+      <section class="w-full max-w-6xl text-center rounded-xl overflow-hidden bg-cover bg-center h-[400px] md:h-[500px] mb-10" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('intropage.jpg');">
         <div class="h-full w-full flex flex-col justify-center items-center text-white px-6">
           <h1 class="text-4xl md:text-5xl font-black mb-2">Volunteer at ELWP</h1>
           <p class="text-base md:text-lg font-light max-w-2xl">
