--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
         </div>
         <h2 class="text-lg font-bold">ELWP Volunteer</h2>
       </div>
-      <nav class="flex items-center gap-6">
-        <a href="#" class="text-sm font-medium text-[#0e161b]">About</a>
-        <a href="#" class="text-sm font-medium text-[#0e161b]">Volunteer</a>
-        <a href="#" class="text-sm font-medium text-[#0e161b]">Events</a>
-      </nav>
-      <a href="portal.html" class="ml-6">
-        <button class="bg-[#1d8cd7] text-white font-bold text-sm px-4 py-2 rounded-xl">
-          Log in
-        </button>
-      </a>
+      <div class="flex items-center gap-6 ml-auto">
+  <!-- Navigation Links -->
+  <a href="#" class="text-sm font-medium text-[#0e161b]">About</a>
+  <a href="#" class="text-sm font-medium text-[#0e161b]">Volunteer</a>
+  <a href="#" class="text-sm font-medium text-[#0e161b]">Events</a>
+
+  <!-- Log in Button -->
+  <a href="portal.html" class="ml-6">
+    <button class="bg-[#1d8cd7] text-white font-bold text-sm px-4 py-2 rounded-xl">
+      Log in
+    </button>
+  </a>
+</div>
     </header>
 
     <!-- Main Content -->
