--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="flex items-center gap-6 ml-auto">
   <!-- Navigation Links -->
   <a href="https://www.elwp.org.uk/Home.htm" class="text-sm font-medium text-[#0e161b]">About</a>
-  <a href="#" class="text-sm font-medium text-[#0e161b]">Volunteer</a>
+  <a href="https://www.elwp.org.uk/JoinUs.htm" class="text-sm font-medium text-[#0e161b]">Volunteer</a>
   <a href="#" class="text-sm font-medium text-[#0e161b]">Events</a>
 
   <!-- Log in Button -->
