--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <a href="#" class="text-sm font-medium text-[#0e161b]">Events</a>
 
   <!-- Log in Button -->
-  <a href="portal.html" class="ml-6">
+  <a href="login.html" class="ml-6">
     <button class="bg-[#1d8cd7] text-white font-bold text-sm px-4 py-2 rounded-xl">
       Log in
     </button>
@@ -56,7 +56,7 @@
 
       <!-- Login CTA -->
       <p class="text-[#507a95] text-sm mt-2">Already a volunteer? Log in here</p>
-      <a href="portal.html" class="w-full max-w-xs mt-2">
+      <a href="login.html" class="w-full max-w-xs mt-2">
         <button class="w-full bg-[#e8eef3] text-[#0e161b] font-bold py-2 rounded-xl">
           Log in
         </button>
