--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
       <h2 class="text-2xl font-bold text-center text-[#0e161b] mb-6">Log in to Your Account</h2>
 
       <!-- Log In Form -->
-      <form action="portal.html" method="POST" class="space-y-6">
+      <form id="login-form" action="portal.html" method="POST" class="space-y-6">
         <!-- Email Field -->
         <div>
           <label for="email" class="block text-sm font-medium text-[#0e161b]">Email</label>
@@ -56,5 +56,8 @@
     <p class="text-center text-sm text-[#507a95] mt-6">
       Not a member yet? <a href="signup.html" class="text-[#1d8cd7] font-medium">Sign up here</a>
     </p>
+
+    <!-- Link to External JavaScript File -->
+    <script src="login.js"></script>
   </body>
 </html>
