--- a/login.html
+++ b/login.html
@@ -29,14 +29,14 @@
         <div>
           <label for="email" class="block text-sm font-medium text-[#0e161b]">Email</label>
           <input type="email" id="email" name="email" placeholder="Enter your email"
-            class="w-full p-3 mt-2 bg-[#f1f5f9] border border-[#d1d8e3] rounded-xl focus:outline-none focus:ring-2 focus:ring-[#1d8cd7]" required />
+            class="w-full p-3 mt-2 bg-[#f1f5f9] border border-[#d1d8e3] rounded-xl focus:outline-none focus:ring-2 focus:ring-[#1d8cd7]" />
         </div>
 
         <!-- Password Field -->
         <div>
           <label for="password" class="block text-sm font-medium text-[#0e161b]">Password</label>
           <input type="password" id="password" name="password" placeholder="Enter your password"
-            class="w-full p-3 mt-2 bg-[#f1f5f9] border border-[#d1d8e3] rounded-xl focus:outline-none focus:ring-2 focus:ring-[#1d8cd7]" required />
+            class="w-full p-3 mt-2 bg-[#f1f5f9] border border-[#d1d8e3] rounded-xl focus:outline-none focus:ring-2 focus:ring-[#1d8cd7]" />
         </div>
 
         <!-- Submit Button -->
