--- a/login.html
+++ b/login.html
@@ -18,7 +18,18 @@
     </style>
   </head>
 
-  <body class="bg-[#f8fafb] min-h-screen flex flex-col justify-center items-center px-4 py-10">
+  <body class="bg-[#f8fafb] min-h-screen flex flex-col justify-between px-4 py-10">
+    <!-- Header (Nav Bar) -->
+    <header class="flex items-center justify-start gap-4 mb-10">
+      <a href="index.html" class="flex items-center gap-2 text-[#0e161b]">
+        <div class="w-8 h-8">
+          <!-- Example logo icon (you can replace it with your own logo image) -->
+          <img src="logoelwp.jpeg" alt="ELWP Logo" class="w-full h-full object-contain" />
+        </div>
+        <h2 class="text-lg font-bold">ELWP Volunteers</h2>
+      </a>
+    </header>
+
     <!-- Log In Form Container -->
     <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md">
       <h2 class="text-2xl font-bold text-center text-[#0e161b] mb-6">Log in to Your Account</h2>
@@ -54,7 +65,7 @@
 
     <!-- Sign Up CTA -->
     <p class="text-center text-sm text-[#507a95] mt-6">
-      Not a member yet? <a href="survey.html" class="text-[#1d8cd7] font-medium">Sign up here</a>
+      Not a member yet? <a href="signup.html" class="text-[#1d8cd7] font-medium">Sign up here</a>
     </p>
 
     <!-- Link to External JavaScript File -->
