--- a/login.html
+++ b/login.html
@@ -18,15 +18,15 @@
     </style>
   </head>
 
-  <body class="bg-[#f8fafb] min-h-screen flex flex-col justify-between px-4 py-10">
+  <body class="bg-[#f8fafb] min-h-screen flex flex-col justify-center items-center px-4 py-10">
     <!-- Header (Nav Bar) -->
-    <header class="flex items-center justify-start gap-4 mb-10">
+    <header class="flex items-center justify-start gap-4 absolute top-5 left-5">
       <a href="index.html" class="flex items-center gap-2 text-[#0e161b]">
         <div class="w-8 h-8">
           <!-- Example logo icon (you can replace it with your own logo image) -->
           <img src="logoelwp.jpeg" alt="ELWP Logo" class="w-full h-full object-contain" />
         </div>
-        <h2 class="text-lg font-bold">ELWP Volunteers</h2>
+        <h2 class="text-lg font-bold">ELWP Volunteer</h2>
       </a>
     </header>
 
