--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 
     <!-- Sign Up CTA -->
     <p class="text-center text-sm text-[#507a95] mt-6">
-      Not a member yet? <a href="signup.html" class="text-[#1d8cd7] font-medium">Sign up here</a>
+      Not a member yet? <a href="survey.html" class="text-[#1d8cd7] font-medium">Sign up here</a>
     </p>
 
     <!-- Link to External JavaScript File -->
