--- a/portal.html
+++ b/portal.html
@@ -60,16 +60,12 @@
                             <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4">
                               <div class="flex flex-col gap-3 pb-3">
                                 <!-- Circle Image Placeholder -->
-                                <img src="https://via.placeholder.com/150" class="rounded-full w-16 h-16" alt="Circle Image">
-                                <p class="text-[#0e161b] text-base font-medium leading-normal">Luminous</p>
+                                <img src="fund.png" class="rounded-full w-16 h-16" alt="Circle Image">
+                                <p class="text-[#0e161b] text-base font-medium leading-normal">Fundraising Circle</p>
                               </div>
                               <div class="flex flex-col gap-3 pb-3">
-                                <img src="https://via.placeholder.com/150" class="rounded-full w-16 h-16" alt="Circle Image">
-                                <p class="text-[#0e161b] text-base font-medium leading-normal">Women in Tech</p>
-                              </div>
-                              <div class="flex flex-col gap-3 pb-3">
-                                <img src="https://via.placeholder.com/150" class="rounded-full w-16 h-16" alt="Circle Image">
-                                <p class="text-[#0e161b] text-base font-medium leading-normal">Designers</p>
+                                <img src="govern.png" class="rounded-full w-16 h-16" alt="Circle Image">
+                                <p class="text-[#0e161b] text-base font-medium leading-normal">Governance Circle</p>
                               </div>
                             </div>
                             <h3 class="text-[#0e161b] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Your projects</h3>
